force-app/main/default/objects/Journey_Task__c/Journey_Task__c.object-meta.xml
<CustomObject>
    <description>This records information related to the onboarding task progress of each Mainlydigital candidate.</description>
    <label>Journey Task</label>
    <nameField>
        <label>Journey Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>