force-app/main/default/objects/Journey_Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to determine whether or not a candidate task/s has been completed.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>