force-app/main/default/objects/Journey_Task__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>This gives an indication on whether a candidate has completed their task, is in the process of completing or if they are behind, based on the target date that has been set.</description>
    <formula>IF(Completed__c == TRUE, &quot;complete&quot;,  IF( Estimated_Completion_Date__c &lt;  TODAY(),&quot;overdue&quot;, &quot;in progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>