force-app/main/default/objects/Journey_Task__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Used for specifying details about candidate tasks</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>