force-app/main/default/objects/Journey_Task__c/fields/Template_Task__c.field-meta.xml
<CustomField>
    <fullName>Template_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template task</label>
    <referenceTo>Template_task__c</referenceTo>
    <relationshipLabel>Journey Tasks</relationshipLabel>
    <relationshipName>Journey_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>